Pad the tokenized sentences and convert the dataset into tf-dataset.

--- a/fine_tune_persian_bert.ipynb
+++ b/fine_tune_persian_bert.ipynb
@@ -3970,6 +3970,103 @@
       },
       "execution_count": 8,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<h4>6. Pad the tokenized datasets into same lengths.</h4>"
+      ],
+      "metadata": {
+        "id": "WpJRF6NjbWi6"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_ids = pad_sequences(\n",
+        "    train_sentences,\n",
+        "    maxlen=params.max_sequence_len,\n",
+        "    padding=\"post\",\n",
+        "    truncating=\"post\",\n",
+        "    dtype=\"long\",\n",
+        ")\n",
+        "\n",
+        "valid_ids = pad_sequences(\n",
+        "    valid_sentences,\n",
+        "    maxlen=params.max_sequence_len,\n",
+        "    padding=\"post\",\n",
+        "    truncating=\"post\",\n",
+        "    dtype=\"long\",\n",
+        ")\n",
+        "\n",
+        "test_ids = pad_sequences(\n",
+        "    test_sentences,\n",
+        "    maxlen=params.max_sequence_len,\n",
+        "    padding=\"post\",\n",
+        "    truncating=\"post\",\n",
+        "    dtype=\"long\",\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "UmnAZbKhbX8B"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<h4>7. Create attention mask.</h4>"
+      ],
+      "metadata": {
+        "id": "c7sMR5t7bbcS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create attention mask\n",
+        "atten_mask = {\n",
+        "    \"train\" : (train_ids != 0).astype(np.float32),\n",
+        "    \"valid\" : (valid_ids != 0).astype(np.float32),\n",
+        "    \"test\"  : (test_ids != 0).astype(np.float32),\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "IT-LBI_Pbcvw"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<h4>8. Create tf-dataset.</h4>"
+      ],
+      "metadata": {
+        "id": "JXvsh2TIbfIA"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_ds = tf.data.Dataset.from_tensor_slices(\n",
+        "    (train_ids, train_labels, atten_mask[\"train\"])\n",
+        ").batch(params.batch_size).prefetch(1)\n",
+        "\n",
+        "valid_ds = tf.data.Dataset.from_tensor_slices(\n",
+        "    (valid_ids, valid_labels, atten_mask[\"valid\"])\n",
+        ").batch(params.batch_size).prefetch(1)\n",
+        "\n",
+        "test_ds = tf.data.Dataset.from_tensor_slices(\n",
+        "    (test_ids, test_labels, atten_mask[\"test\"])\n",
+        ").batch(params.batch_size).prefetch(1)"
+      ],
+      "metadata": {
+        "id": "m3AHI7mmbgPw"
+      },
+      "execution_count": 11,
+      "outputs": []
     }
   ]
 }
