--- a/fine_tune_persian_bert.ipynb
+++ b/fine_tune_persian_bert.ipynb
@@ -4529,6 +4529,35 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<h4>11. Define metric, loss and optimizer.</h4>"
+      ],
+      "metadata": {
+        "id": "fRrXGhNRcnVI"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def flat_accuracy(y_true, y_preds):\n",
+        "  num_instances = tf.cast(tf.shape(y_true)[0], tf.float32)\n",
+        "  y_preds = tf.reshape(tf.argmax(y_preds, axis=1), shape=(-1,))\n",
+        "  y_true = tf.cast(tf.reshape(y_true, shape=(-1,)), dtype=tf.int64)\n",
+        "  return tf.reduce_sum(tf.cast(tf.math.equal(y_preds, y_true), tf.float32)) / num_instances\n",
+        "\n",
+        "loss = tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True)\n",
+        "optimizer = tf.keras.optimizers.Adam(3e-5)\n",
+        "\n",
+        "params.num_epochs = 3"
+      ],
+      "metadata": {
+        "id": "ib7qY3Lhcnno"
+      },
+      "execution_count": 14,
+      "outputs": []
     }
   ]
 }
